deploy.yaml
---
# Namespace (opcjonalnie)
apiVersion: v1
kind: Namespace
metadata:
  name: todolist
---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:lts
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-pv
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-pv
          emptyDir: {}
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: todolist
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
---
# API Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-api
  namespace: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-api
  template:
    metadata:
      labels:
        app: todolist-api
    spec:
      containers:
        - name: api
          image: marcin00.azurecr.io/todolist-api:1.1
          ports:
            - containerPort: 80
---
# API Service
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: todolist
spec:
  selector:
    app: todolist-api
  ports:
    - port: 80
      targetPort: 80
---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-frontend
  namespace: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-frontend
  template:
    metadata:
      labels:
        app: todolist-frontend
    spec:
      containers:
        - name: frontend
          image: marcin00.azurecr.io/todolist-frontend:1.1
          ports:
            - containerPort: 80
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: todolist-frontend
  namespace: todolist
spec:
  selector:
    app: todolist-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
