ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-ingress
  namespace: todolist
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: todolist.marcin00.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todolist-frontend
            port:
              number: 80
